<resources>
    <string name="app_name">TennisHistory</string>
    <string name="score">Score</string>
    <string name="zero">0</string>
    <string name="no_matches_with_sp">There are no matches with specified parameters</string>
    <string name="please_specify_request">Please specify request</string>
    <string name="write_to_dev">Write to developer</string>
    <string name="version">Version</string>
    <string name="tennis_history">Tennis History</string>
    <string name="choose_action">Choose the action.</string>
    <string name="continue_match">Continue match.</string>
    <string name="delete_from_db">Delete from data base.</string>
    <string name="ad_alert_for_selected_match">Do you want to delete this result from data base?</string>
    <string name="default_checkboxes">Default search would be by all parameters</string>
    <string name="check_match_mode">Check match mode</string>
    <string name="check_court_surface">Check court surface</string>
    <string name="search_could_be">Search could be by one player</string>
    <string name="enter_name_second">Enter second player full name</string>
    <string name="max_number_of_characters">Max number of characters 11</string>
    <string name="second_name">Second name</string>
    <string name="first_name">First name(required)</string>
    <string name="enter_name">Enter first player full name</string>
    <string name="table_score">   TABLE SCORE</string>
    <string name="Double_error_for_spinner">DE</string>
    <string name="Unenforced_error_for_spinner">UE</string>
    <string name="Result">Search result</string>
    <string name="desc_for_overall_button">Overall statistic</string>
    <string name="desc_for_piechart_de_overall_charts">This piechart compares quantity of all double errors of selected players.\nIn the middle of piechart quantity of matches between selected players.\n\nAverage for match:</string>
    <string name="desc_for_barchart_de_overall_charts">This barchart compares quantity of double errors in every match.Dates of matches are in the bottom of barchart.Scroll left to see all data.</string>
    <string name="header_for_de_overall_charts">Overall double errors charts</string>
    <string name="desc_for_piechart_ue_overall_charts">This piechart compares quantity of all unenforced errors of selected players.\nIn the middle of piechart quantity of matches between selected players.\n\nAverage for match:</string>
    <string name="desc_for_barchart_ue_overall_charts">This barchart compares quantity of unenforced errors in every match.Dates of matches are in the bottom of barchart.Scroll left to see all data.</string>
    <string name="header_for_ue_overall_charts">Overall unenforced errors charts</string>
    <string name="desc_for_piechart_ace_overall_charts">This piechart compares quantity of all aces of selected players.\nIn the middle of piechart quantity of matches between selected players.\n\nAverage for match:</string>
    <string name="desc_for_barchart_ace_overall_charts">This barchart compares quantity of aces in every match.Dates of matches are in the bottom of barchart.Scroll left to see all data.</string>
    <string name="header_for_ace_overall_charts">Overall aces charts</string>
    <string name="desc_for_piechart_winner_overall_charts">This piechart compares quantity of all winners of selected players.\nIn the middle of piechart quantity of matches between selected players.\n\nAverage for match:</string>
    <string name="no_dat_to_chart">No data</string>
    <string name="desc_for_barchart_winner_overall_charts">This barchart compares quantity of winners in every match.Dates of matches are in the bottom of barchart.Scroll left to see all data.</string>
    <string name="header_for_winner_overall_charts">Overall winners charts</string>
    <string name="Overall_statistic">Overall statistic</string>
    <string name="Charts">Charts</string>
    <string name="Hints">Hints</string>
    <string name="DetailedStatistic">Detailed statistic</string>
    <string name="DE">DE</string>
    <string name="UE">UE</string>
    <string name="BarChartDescFor1Match">This barchart compares different type of goals both players for the selected match.</string>
    <string name="PieChartDescForPlayer">This piechart shows what percent and what type of point player has won from total of the won points.</string>
    <string name="descForCenterNumber">The number in the center of piechart is quantity of the won points.</string>
    <string name="UEdesc">UE - unenforced error</string>
    <string name="DEdesc">DE - double error</string>
    <string name="match_mode_full">Match mode: </string>
    <string name="Sets5US_short">5 sets(US)</string>
    <string name="Sets3US_short">3 sets(US)</string>
    <string name="Status">Status</string>
    <string name="Date">Date</string>
    <string name="Surface">Surface</string>
    <string name="KTB">KTB</string>
    <string name="Search">Search</string>
    <string name="info_1">Click on back arrow icon for return to score table.</string>
    <string name="KTB_starts">KTB starts</string>
    <string name="Please_select_court_surface">Please select court surface.</string>
    <string name="match_mode">Mode</string>
    <string name="Stop_the_match">Stop the match</string>
    <string name="really_redo">Do you really want to redo previous point?</string>
    <string name="really_undo">Do you really want to undo previous point?</string>
    <string name="The_result_could_not">The result could not to save, because the limit(20) to save the results for this version is over.\nDo you want to exit the match?</string>
    <string name="Do_you_want">Do you want to save the result?</string>
    <string name="Confirm">Confirm</string>
    <string name="Back">Back</string>
    <string name="Choose_the_reason">Choose the reason</string>
    <string name="Another_Match_is_paused">Another.\nMatch is paused</string>
    <string name="Another_Match_is_finished">Another.\nMatch is finished</string>
    <string name="loss">\n(loss)</string>
    <string name="Retired">Retired </string>
    <string name="No">No</string>
    <string name="Continue_match">Continue\nmatch</string>
    <string name="Yes">Yes</string>
    <string name="ad_alert_1">You are going to exit the match.\nDo you want to save the result?</string>
    <string name="select_gt">Choose a goal type</string>
    <string name="select_gt_for_spinner">Goal type</string>
    <string name="goal">GOAL</string>
    <string name="START">START</string>
    <string name="hard_type">Hard</string>
    <string name="clay_type">Clay</string>
    <string name="grass_type">Grass</string>
    <string name="iHard_type">Indoor hard</string>
    <string name="rubber_type">Rubber</string>
    <string name="modeMatch">Tap to select match mode</string>
    <string name="choose_court_type">Please select the court surface</string>
    <string name="toast_1_pl">Please enter a first name of a first player</string>
    <string name="toast_2_pl">Please enter a first name of a second player</string>
    <string name="match_desc_KTB">The match lasts up to 10 victorious draws of one of players at a difference in the account not less than 2.At account 9:9 the game is played to a difference in the account in 2 points.</string>
    <string name="match_desc_1_set">The match lasts 1 set.At account 6:6 the game tie-break is played.</string>
    <string name="match_desc_3_set_KTB">The match lasts prior to a victory of one of players in 2 sets.At account 1:1 on sets king tie-break is played.</string>
    <string name="match_desc_3_set_US">The match lasts prior to a victory of one of players in 2 sets.In a decisive set tie-break is played.</string>
    <string name="match_desc_3_set">The match lasts prior to a victory of one of players in 2 sets.</string>
    <string name="match_desc_5_set_US">The match lasts prior to a victory of one of players in 3 sets.In a decisive set tie-break is played.</string>
    <string name="match_desc_5_set">The match lasts prior to a victory of one of players in 3 sets.</string>
    <string name="King_tie_break">King tie-break</string>
    <string name="one_set">1 set</string>
    <string name="three_sets_KTB">3 sets(KTB)</string>
    <string name="three_sets_US">3 sets(USOpen)</string>
    <string name="three_sets">3 sets</string>
    <string name="five_sets_US">5 sets(USOpen)</string>
    <string name="five_sets">5 sets</string>
    <string name="Winner">Winner</string>
    <string name="Ace">Ace</string>
    <string name="Unenforced_error">Unenforced error</string>
    <string name="Double_error">Double error</string>
    <string name="data_base">Data base</string>
    <string name="settings">Settings</string>
    <string name="Help">Help</string>
    <string name="about">About</string>
    <string name="new_match">New match</string>
    <string name="UNDO">UNDO</string>
    <string name="REDO">REDO</string>
    <string name="SGTMM">SAVE</string>
    <string name="Finished">Finished</string>
    <string name="Paused">Paused</string>
    <string name="some_hints">Some hints to upgrade game against</string>
    <string name="to">To:</string>
    <string name="Statistic">Statistic</string>
    <string name="wins_1_set">wins 1 set</string>
    <string name="wins_2_set">wins 2 set</string>
    <string name="wins_3_set">wins 3 set</string>
    <string name="wins_4_set">wins 4 set</string>
    <string name="Tie_break_starts">Tie-break starts</string>
    <string name="WINS">WINS</string>
    <string name="hint_by_winner_1">Continue to use your strengths competently. You surpass the sparring partner in quality of a game.</string>
    <string name="hint_by_winner_2">At the moment you use better your strengths.</string>
    <string name="hint_by_winner_3">Analyze, foresee, monitor the hits of the sparring partner. Do not play under strengths of the sparring partner.</string>
    <string name="hint_by_winner_4">Try to use better your strength.</string>
    <string name="hint_by_winner_5">You use your strengths well, but at the same time the sparring partner does not concede to you.
    Analyze, foresee, monitor the hits of the sparring partner. Do not play under strengths of the sparring partner.</string>
    <string name="hint_by_UE_1">Do not use risky or uncertain hits. Improve quality of his hits.</string>
    <string name="info_main_act_help_1">\u0020\u0020\u0020\u0020This application is developed especially for tennis amateurs who want to improve his tennis skills and create your own tennis history</string>
    <string name="info_main_act_help_2">How it works.</string>
    <string name="info_main_act_help_3">\u0020\u0020- Keep a count of match with the help of this application.</string>
    <string name="info_main_act_help_4">\u0020\u0020- Specify a goal type.</string>
    <string name="info_main_act_help_5">\u0020\u0020- See/analyze the statistic during the match.</string>
    <string name="info_main_act_help_6">\u0020\u0020- Also you can pause/stop the match.</string>
    <string name="info_main_act_help_7">\u0020\u0020- Add the result of match in data base.</string>
    <string name="info_main_act_help_8">\u0020\u0020- In data base with the help of search find a required match and read the hints which could help you to improve your game against specified sparring partner(Hints are based on detailed statistic of the match).</string>
    <string name="info_main_act_help_9">\u0020\u0020- Also you can get hints and overall detailed statistic based on several matches between similar sparring partners.</string>
    <string name="info_7_1">Click on matchcard to see the detailed match statistic.</string>
    <string name="info_7_2">Long click on matchcard to delete or continue match.</string>
    <string name="info_7_3">When as a result of search in matches participate two players, "Overall statistic" is enable.</string>
</resources>