<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/trueclay"
    tools:context="com.example.android.ver13.AA_TrueHelpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/framenewmatch"
        android:text="@string/info_main_act_help_1"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:text="@string/info_main_act_help_2"
        android:layout_margin="5dp"
        android:background="@drawable/framenewmatch"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:background="@drawable/framenewmatch"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:text="@string/info_main_act_help_3" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:text="@string/info_main_act_help_4" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:text="@string/info_main_act_help_5" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:text="@string/info_main_act_help_6" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:text="@string/info_main_act_help_7" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:text="@string/info_main_act_help_8" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:text="@string/info_main_act_help_9" />
</LinearLayout>

    <Button
        android:text="HELP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showHelp"/>


</LinearLayout>
</ScrollView>